--- a/package.json
+++ b/package.json
@@ -21,5 +21,24 @@
   "bugs": {
     "url": "https://github.com/mhhf/dapple-pkg/issues"
   },
-  "homepage": "https://github.com/mhhf/dapple-pkg#readme"
+  "homepage": "https://github.com/mhhf/dapple-pkg#readme",
+  "dependencies": {
+    "async": "^2.0.1",
+    "dapphub": "0.0.7",
+    "dapple-core": "^0.1.3",
+    "deasync": "^0.1.7",
+    "fs-extra": "^0.30.0",
+    "ipfs-api": "^6.0.3",
+    "ipfs-js": "0.0.11",
+    "lazreq": "^0.1.1",
+    "lodash": "^4.15.0",
+    "semver": "^5.3.0",
+    "stream-combiner": "^0.2.2",
+    "through2": "^2.0.1",
+    "web3": "^0.16.0"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
+  }
 }
