--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
   "homepage": "https://github.com/mhhf/dapple-pkg#readme",
   "dependencies": {
     "async": "^2.0.1",
+    "bl": "^1.1.2",
     "dapphub": "0.0.7",
     "dapple-core": "^0.1.3",
     "deasync": "^0.1.7",
     "fs-extra": "^0.30.0",
+    "glob": "^7.0.5",
+    "ipfs": "^0.14.3",
     "ipfs-api": "^6.0.3",
     "ipfs-js": "0.0.11",
     "lazreq": "^0.1.1",
     "lodash": "^4.15.0",
+    "map-limit": "0.0.1",
     "semver": "^5.3.0",
     "stream-combiner": "^0.2.2",
     "through2": "^2.0.1",
+    "vinyl-fs": "^2.4.3",
     "web3": "^0.16.0"
   },
   "devDependencies": {
