--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "dapple-pkg",
-  "version": "0.0.2-dev",
+  "name": "dapple-pkg", "version": "0.0.2-dev",
   "description": "Dapple packages module",
   "main": "lib/main.js",
   "scripts": {
@@ -26,7 +25,7 @@
     "async": "^2.0.1",
     "bl": "^1.1.2",
     "dapphub": "0.0.7",
-    "dapple-core": "^0.1.3",
+    "dapple-core": "^0.1.5",
     "deasync": "^0.1.7",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
