--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   },
   "homepage": "https://github.com/mhhf/dapple-pkg#readme",
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^2.1.2",
     "bl": "^1.1.2",
     "dapphub": "0.0.7",
-    "dapple-core": "^0.1.7",
+    "dapple-core": "^0.1.25",
     "deasync": "^0.1.7",
+    "ethpm": "0.0.3",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "ipfs": "^0.14.3",
-    "ipfs-api": "^6.0.3",
-    "ipfs-js": "0.0.11",
+    "ipfs-api": "^12.0.2",
+    "ipfsd-ctl": "^0.17.0",
     "lazreq": "^0.1.1",
     "lodash": "^4.15.0",
     "map-limit": "0.0.1",
