fix: lock file may not contain build dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dapple-pkg",
-  "version": "0.0.11-dev",
+  "version": "0.0.12",
   "description": "Dapple packages module",
   "main": "lib/main.js",
   "scripts": {
